[package]
name = "mtots_wa"
version = "0.1.0"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mtots_core = { path = "../mtots_core", version = "0.1.0" }
wasm-bindgen = "0.2"
js-sys = "0.3"
