[package]
name = "mtots_wa"
version = "0.1.1"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
mtots_core = { path = "../mtots_core", version = "0.1.1" }
stdweb = "0.4"

# This is not actually necessary if you build with cargo web, but allows
# rls to work with vscode
wasm-bindgen = "0.2"
